fix 修复 routers 配置错误
